# crowe-quantum

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  docker-publish.yml  publish-pypi.yml  publish.yml
docs/superpowers/specs/: 2026-03-29-crowe-quantum-platform-design.md
